Add loading screen, dark mode toggle, and scroll indicator; enhance button interactions with sound effects and animations

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,17 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div class="loading" id="loading">
+        <div class="loading-spinner"></div>
+    </div>
+
+    <!-- Dark Mode Toggle -->
+    <div class="dark-mode-toggle" id="darkModeToggle"></div>
+
+    <!-- Scroll Indicator -->
+    <div class="scroll-indicator" id="scrollIndicator"></div>
+
     <header>
         <nav>
             <a href="#" class="logo">KensFolio</a>
