Revise homepage content and styles to shift from an underwater theme to a vibrant cartoon aesthetic. Update hero and about sections with new text, remove sea creature elements, and adjust color palette in CSS for a brighter, more cheerful look. Enhance button styles and hover effects for improved user interaction.

--- a/public/index.html
+++ b/public/index.html
@@ -39,20 +39,13 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Hi! I'm <br> Ken Majas Islamy</h1>
-                <h2>Making digital art under the sea! 🧽</h2>
-                <p class="typing-text">I create fun, colorful designs that bring joy and personality to the web, just like Spongebob brings joy to Bikini Bottom! 🌊</p>
+                <h2>Making digital art with yellow vibes!</h2>
+                <p class="typing-text">I create fun, colorful designs that bring joy and personality to the web.</p>
                 <a href="#portfolio" class="btn">See My Work</a>
             </div>
             <div class="hero-image">
                 <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/45256b47-6e81-4c1c-b51b-7ca905c5caaf.png" alt="Cartoon character portrait with exaggerated features, wearing yellow clothes and smiling, with a playful background of doodles" />
             </div>
-        </div>
-        <!-- Floating sea creatures -->
-        <div class="sea-creatures">
-            <div class="jellyfish">🪼</div>
-            <div class="fish">🐠</div>
-            <div class="starfish">⭐</div>
-            <div class="coral">🪸</div>
         </div>
     </section>
 
@@ -62,17 +55,17 @@
                 <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/085ec538-80dc-4694-943c-e1806f28a024.png" alt="Illustrated avatar doing various creative activities with digital art tools, surrounded by paint splashes and cartoon elements" />
             </div>
             <div class="about-text">
-                <h2>About Me & My Underwater World 🧽</h2>
-                <p>Welcome to my colorful underwater universe! I'm a digital artist specializing in cartoon-style illustrations and designs, just like Spongebob! My work combines playful characters with vibrant colors, focusing on bringing joy and happiness to everyone who sees it! 🌊</p>
-                <p>With over 5 years of experience in the digital art field, I've developed a unique style that blends classic cartoon aesthetics with modern digital techniques. My journey began when I first picked up a drawing tablet, and I haven't looked back since - just like Spongebob never gives up on his dreams! 🪼</p>
-                <p>When I'm not creating digital art, you can find me teaching cartoon workshops or exploring new illustration techniques. I believe that art should be accessible and enjoyable for everyone, just like how Spongebob makes everyone smile! 🐠</p>
+                <h2>About Me & My Cartoon World</h2>
+                <p>Welcome to my colorful universe! I'm a digital artist specializing in cartoon-style illustrations and designs. My work combines playful characters with vibrant colors, focusing primarily on sunny yellow tones that bring warmth and happiness.</p>
+                <p>With over 5 years of experience in the digital art field, I've developed a unique style that blends classic cartoon aesthetics with modern digital techniques. My journey began when I first picked up a drawing tablet, and I haven't looked back since!</p>
+                <p>When I'm not creating digital art, you can find me teaching cartoon workshops or exploring new illustration techniques. I believe that art should be accessible and enjoyable for everyone.</p>
             </div>
         </div>
     </section>
 
     <section class="skills section-fade" id="skills">
         <div class="section-title">
-            <h2>My Super Skills Under the Sea! 🐠</h2>
+            <h2>My Super Skills</h2>
         </div>
         <div class="skills-container">
             <div class="skill-item">
@@ -134,7 +127,7 @@
 
     <section class="portfolio section-fade" id="portfolio">
         <div class="section-title">
-            <h2>My Underwater Art Gallery 🪸</h2>
+            <h2>My Cartoon Gallery</h2>
         </div>
         <div class="portfolio-container">
             <div class="portfolio-item">
@@ -226,7 +219,7 @@
 
     <section class="contact section-fade" id="contact">
         <div class="section-title">
-            <h2>Let's Create Under the Sea Together! 🌊</h2>
+            <h2>Let's Create Together!</h2>
         </div>
         <div class="contact-container">
             <div class="contact-form">
@@ -244,7 +237,7 @@
                         <input type="text" id="subject" name="subject" required>
                     </div>
                     <div class="form-group">
-                        <label for="message">Your Underwater Art Idea 🧽</label>
+                        <label for="message">Your Cartoon Idea</label>
                         <textarea id="message" name="message" required></textarea>
                     </div>
                     <button type="submit" class="submit-btn">Send Message</button>
@@ -263,7 +256,7 @@
     <footer>
         <div class="footer-content">
             <p>© 2025 KenFolio. All rights reserved.</p>
-            <p>Made with ❤️ and lots of underwater magic! 🧽🌊</p>
+            <p>Made with ❤️ and lots of yellow paint!</p>
         </div>
     </footer>
 </body>
