--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,20 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Loading Screen -->
-    <div class="loading" id="loading">
-        <div class="loading-spinner"></div>
-    </div>
+        <!-- Role choice modal: Guest or Admin -->
+        <div id="roleModal" style="position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,0.45);z-index:2000">
+            <div style="background:var(--secondary-yellow);padding:1.25rem;border-radius:12px;border:4px solid var(--dark-outline);max-width:420px;width:90%;text-align:center">
+                <h2 style="margin:.25rem 0">Welcome</h2>
+                <p style="color:var(--text-dark)">Choose how you'd like to view the site</p>
+                <div style="display:flex;gap:.75rem;justify-content:center;margin-top:1rem">
+                    <button id="roleGuest" class="btn" style="background:var(--accent-blue)">Continue as Guest</button>
+                    <button id="roleAdmin" class="btn" style="background:#ff6b6b">Admin Login</button>
+                </div>
+                <p style="font-size:.85rem;margin-top:.75rem;color:#333">Guests can view the portfolio; Admins must login to edit.</p>
+            </div>
+        </div>
 
-    <!-- Dark Mode Toggle -->
-    <div class="dark-mode-toggle" id="darkModeToggle"></div>
+        <!-- Dark Mode Toggle -->
 
     <!-- Scroll Indicator -->
     <div class="scroll-indicator" id="scrollIndicator"></div>
@@ -29,7 +36,9 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
-            </ul>
+                <!-- dark mode removed per request -->
+                </ul>
+                <div id="publicAdminControls" style="margin-left:1rem;display:flex;align-items:center;gap:.5rem"></div>
         </nav>
     </header>
 
@@ -65,7 +74,7 @@
 
     <section class="skills section-fade" id="skills">
         <div class="section-title">
-            <h2>My Super Skills</h2>
+            <h2>My Skills</h2>
         </div>
         <div class="skills-container">
             <div class="skill-item">
@@ -127,7 +136,7 @@
 
     <section class="portfolio section-fade" id="portfolio">
         <div class="section-title">
-            <h2>My Cartoon Gallery</h2>
+            <h2>My Projects</h2>
         </div>
         <div class="portfolio-container">
             <div class="portfolio-item">
